name:                 howerpoint
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               Frantisek Kocun
maintainer:           frantisek.kocun@merchenta.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable howerpoint
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5, deepseq
  hs-source-dirs:       src
  default-language:     Haskell2010
