name:                 howerpoint
version:              0.1.0.0
synopsis:
homepage:
author:               Frantisek Kocun
maintainer:           frantisek.kocun@merchenta.com
category:
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Howerpoint
  build-depends:        base >= 4.7 && < 5, deepseq, terminal-size, split
  default-language:     Haskell2010
